--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,12 +24,12 @@
       <% } %>
       <p id="greeting-prompt">What would you like to do?</p>
       <div class="buttons">
-        <button id="login-button" onclick="window.location.href='/login';">
+        <a id="login-button" href='/login'>
           Login
-        </button>
-        <button id="register-button" onclick="window.location.href='/register';">
+        </a>
+        <a id="register-button" href='/register'>
           Register
-        </button>
+        </a>
       </div>
     </main>
   </body>
