--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -17,18 +17,18 @@
     <main>
       <h1 id="personal-greeting">Welcome, <%= user.first_name.charAt(0).toUpperCase() + user.first_name.slice(1) %></h1>
       <div class="buttons">
-        <button id="dashboard-button" onclick="window.location.href='/users/<%= user.id %>/dashboard';">
+        <a id="dashboard-button" href='/users/<%= user.id %>/dashboard'>
           Dashboard
-        </button>
-        <button id="shop-button" onclick="window.location.href='/users/<%= user.id %>/shop';">
+        </a>
+        <a id="shop-button" href='/users/<%= user.id %>/shop'>
           Shop
-        </button>
-        <button id="cart-button" onclick="window.location.href='/users/<%= user.id %>/cart';">
+        </a>
+        <a id="cart-button" href='/users/<%= user.id %>/cart'>
           Cart
-        </button>
-        <button id="logout-button" onclick="window.location.href='/users/<%= user.id %>/logout';">
+        </a>
+        <a id="logout-button" href='/users/<%= user.id %>/logout'>
           Logout
-        </button>
+        </a>
       </div>
       <% if (messages.order_deleted) { %>
         <ul class="messages">
@@ -59,8 +59,11 @@
             </li>
           </ul>
           <form action="/orders/<%= order.id %>" method="post">
+            <input type="hidden" name="_csrf" value="<%= csrfToken %>">
             <input type="hidden" name="_method" value="DELETE">
-            <button class="cancel-order" type="submit">Cancel Order</button>
+            <button class="cancel-order" type="submit">
+              Cancel Order
+            </button>
           </form>
           </br>
         <% }); %>
